@@ -11,6 +11,7 @@ Version 4.1.3:
    patch by: Eli Lindsey
  * Feature: BGP LS IPv6 parsing support
    patch by: Tinus Flagstad
+ * Feature: healthcheck handle loopback for non-Linux machines
  * Fix: use local IP for router-id when the peer is auto-deteted (and not the remote IP)
  * Fix: potential python3/python2 bytes vs string issues when generating updates
  * Fix: label is mandatory when using RD, force it, and perform better checks on the configuration
@@ -21,6 +22,9 @@ Version 4.1.3:
  * Fix: not correctly recording AFI for next-hop self use
  * Fix: removal of ip address by healthcheck
    patch by: wavezhang
+ * Fix: healthcheck on ^C during time.sleep, exit gracefully
+ * Fix: healthcheck do not fail if the IP address exist when we are trying to add it
+ * Fix: healthcheck correctly remove the IP address on going down if it was added
  * Fix: bug when parsing passive keyword alone (was false not true)
  * CHANGE: large change to the configuration code (should not have any effect but the devil is in the details)
  * CHANGE: using next-hop self could lead to route generated with a IPv6 next-hop in the IPv4 next-hop
